--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -2,15 +2,15 @@ schema: hugoblox/author/v1
 slug: me
 is_owner: true
 name:
-  display: Dr. Alex Johnson
-  given: Alex
-  family: Johnson
+  display: Chiara Nardin
+  given: Chiara
+  family: Nardin
   alternate: ''  # Example: 王伟
   pronunciation: ''  # Example: Wáng Wěi
-  pronouns: he/him
+  pronouns: she/her
 postnominals:
   - PhD
-  - MIEEE
+  - Structural Engineer
 status:
   icon: "☕️"
 role: Senior AI Research Scientist
