--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,14 +13,14 @@ main:
   - name: Talks
     url: /#talks
     weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
+  # - name: News
+  #   url: /#news
+  #   weight: 13
   - name: Projects
     url: projects/
+    weight: 20
+  - name: Experience
+    url: experience/
     weight: 30
   - name: Courses
     url: courses/
