--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -13,23 +13,20 @@ postnominals:
   - Structural Engineer
 status:
   icon: "☕️"
-role: Senior AI Research Scientist
+role: MSCA PostDoc at ETH Zurich (Switzerland) and UniTn (Italy)
 bio: |
-  Alex Johnson is a Senior AI Research Scientist at Meta AI. His research
-  has been published in top conferences like NeurIPS and ICML, with over
-  10,000 citations. Alex is passionate about pushing the boundaries of AI
-  while ensuring ethical development.
+  Chiara Nardin 
 
 affiliations:
-  - name: Meta AI
-    url: https://ai.meta.com/
+  - name: ETH Zurich - Risk Safety and Uncertainty Quantification (RSUQ) Chair 
+    url: https://sudret.ibk.ethz.ch/the-chair/people/visiting-scholars/chiara-nardin.html
+  - name: UniTn - Department of Civil and Industrial Engineering
+    url: https://researchcenter.unitn.it/en/nhmsdc/people
 
 links:
   - icon: at-symbol
-    url: mailto:alex.johnson@example.com
+    url: mailto:chiara.nardin@unitn.it
     label: E-mail Me
-  - icon: brands/x
-    url: https://x.com/example
   - icon: brands/github
     url: https://github.com/example
   - icon: brands/linkedin
@@ -40,16 +37,16 @@ links:
     url: https://orcid.org/0000-0002-1825-0097
 
 interests:
-  - Large Language Models
-  - Computer Vision
-  - Reinforcement Learning
-  - AI Ethics
+  - Uncertainty Quantification
+  - Structural Engineering
+  - Seismic Risk Assessment
+  - Reliability Analysis
 
 education:
-  - degree: PhD Computer Science
-    institution: Stanford University
-    start: 2015-09-01
-    end: 2019-06-30
+  - degree: PhD Structural Engineering
+    institution: University of Trento
+    start: 2019-11-01
+    end: 2022-12-21
     summary: |
       Thesis on scaling laws for neural language models. Published 5 papers in NeurIPS and ICML.
     button:
