--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # ============================================================================
 # Hugo Site .gitignore
 # ============================================================================
+git config --global core.protectHFS true
+git config --global core.protectNTFS true
 
 # ============================================================================
 # Hugo Build Artifacts
