ADDS -- phd thesis

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ git config --global core.protectHFS true
 git config --global core.protectNTFS true
 
 # ============================================================================
+# Specific files
+# ============================================================================
+static/uploads/phd_unitn_chiara_nardin.pdf
+
+# ============================================================================
 # Hugo Build Artifacts
 # ============================================================================
 
