--- a/data/authors/stefano-marelli.yaml
+++ b/data/authors/stefano-marelli.yaml
@@ -25,6 +25,6 @@ links:
     url: mailto:marelli@ibk.baug.ethz.ch
     label: E-mail Me
   - icon: academicons/google-scholar
-    url: https://scholar.google.com/citations?user=example
+    url: https://scholar.google.com/citations?user=4mi4dJ8AAAAJ&hl=en&oi=ao
   - icon: academicons/orcid
-    url: https://orcid.org/0000-0002-1825-0097
+    url: https://orcid.org/0000-0002-9268-9014
