--- a/data/authors/chiara-nardin.yaml
+++ b/data/authors/chiara-nardin.yaml
@@ -48,66 +48,74 @@ education:
     start: 2019-11-01
     end: 2022-12-22
     summary: |
-      Nowadays, earthquakes are among the most destructive natural catastrophes.
-      Based on observations of damage following recent disastrous seismic events
-      and numerical studies, it emerges that critical non-structural components
-      (NSCs), ubiquitous to most industrial facilities, are particularly and even
-      disproportionately vulnerable to earthquakes.
-
-      Nonetheless, seismic provisions for industrial facilities and their process
-      equipment are still based on classical load-and-resistance factor design;
-      a performance-based earthquake engineering (PBEE) approach should instead
-      be preferred.
-
-      However, recent research within a PBEE perspective remarked:
-      (i) a lack of definition of performance objectives for NSCs;
-      (ii) a gap in fully comprehensive testing campaigns on coupled
-      NSC–structure systems.
-
-      In this respect, this PhD thesis introduces a computational framework for
-      efficient and accurate seismic fragility analysis based on experimental
-      test data, refined FE models, and surrogate-based uncertainty quantification.
-      State-dependent fragility curves are derived using polynomial chaos expansion
-      (PCE) surrogate models with dimensionality reduction via PCA.
+      Developed a computational framework for seismic fragility assessment of industrial non-structural components using experiments, FE models, and surrogate-based uncertainty quantification.
+    #  Nowadays, earthquakes are among the most destructive natural catastrophes.
+    #  Based on observations of damage following recent disastrous seismic events
+    #  and numerical studies, it emerges that critical non-structural components
+    #  (NSCs), ubiquitous to most industrial facilities, are particularly and even
+    #  disproportionately vulnerable to earthquakes.
+#
+    #  Nonetheless, seismic provisions for industrial facilities and their process
+    #  equipment are still based on classical load-and-resistance factor design;
+    #  a performance-based earthquake engineering (PBEE) approach should instead
+    #  be preferred.
+#
+    #  However, recent research within a PBEE perspective remarked:
+    #  (i) a lack of definition of performance objectives for NSCs;
+    #  (ii) a gap in fully comprehensive testing campaigns on coupled
+    #  NSC–structure systems.
+#
+    #  In this respect, this PhD thesis introduces a computational framework for
+    #  efficient and accurate seismic fragility analysis based on experimental
+    #  test data, refined FE models, and surrogate-based uncertainty quantification.
+    #  State-dependent fragility curves are derived using polynomial chaos expansion
+    #  (PCE) surrogate models with dimensionality reduction via PCA.
     button:
       text: Download dissertation
       url: /phd_unitn_chiara_nardin_red.pdf
       icon: hero/arrow-down-tray
-  - degree: MS Computer Science
-    institution: Carnegie Mellon University
+  - degree: MS (Structural) Civil Engineering 
+    institution: University of Trento
+    start: 2016-09-01
+    end: 2019-03-29
+  - degree: BS Civil Engineering
+    institution: University of Trento
     start: 2013-09-01
-    end: 2015-05-31
-  - degree: BS Computer Science
-    institution: MIT
-    start: 2009-09-01
-    end: 2013-05-31
+    end: 2016-09-22
 
+# CHANGE HERE
 experience:
-  - role: Senior AI Research Scientist
-    org: Meta AI
-    start: 2020-01-01
+  - role: MSCA PostDoc Fellow at ETH Zürich and UniTn 
+    org: EU MSCA
+    start: 2025-01-01
     summary: |
-      Leading research on multimodal AI systems. Contributed to Llama 2 and other open-source models.
+      REACTIS: Seismic Risk Reduction and Adaptation for Complex Time-dependent Industrial Systems
     button:
-      text: View portfolio
-      url: /
+      text: View project
+      url: /reactis
       icon: hero/arrow-down-tray
-  - role: AI Research Intern
-    org: OpenAI
-    start: 2019-06-01
-    end: 2019-12-31
+  - role: PostDoc Fellow at UniTn
+    org: University of Trento
+    start: 2024-01-01
+    end: 2024-12-31
     summary: |
-      Worked on GPT-3 scaling. Co-authored paper on prompt engineering.
+      PREVENT: development of innovative predictive models for induced seismicity based on physics-informed machine learning.
+  - role: PostDoc Fellow at UniTn
+    org: University of Trento
+    start: 2023-01-01
+    end: 2023-12-31
+    summary: |
+      SPOKE#9: Development of Markovian transition matrices for coupled industrial structure-process component systems exposed to seismic sequences.
 
 skills:
   - name: Technical Skills
     items:
-      - label: Python
-        level: 5
-      - label: Machine Learning
-        level: 5
-      - label: Cloud Computing
+      - label: MatLab
         level: 4
+      - label: Python
+        level: 3
+      - label: Machine Learning
+        level: 3
   - name: Research & Communication
     items:
       - label: Academic Writing
@@ -118,16 +126,24 @@ skills:
         level: 4
 
 languages:
-  - name: English
+  - name: Italian
     level: 5
     label: Native
-  - name: Spanish
-    level: 4
+  - name: English
+    level: 5
     label: Fluent
+  - name: German
+    level: 2
+    label: Basic
 
 awards:
-  - title: Best Paper Award
-    awarder: NeurIPS
-    date: "2022-12-01"
-    summary: Awarded for groundbreaking work on efficient training of large models.
+  - title: ReLUIS –   20 Years Research Prize, Rome
+    awarder: ReLUIS
+    date: "2023-11-08"
+    summary: Award for creative and outstanding research initiatives in the field of seismic and structural engineering.
+    icon: hero/trophy
+  - title: APESS – Asia Pacific Euro Summer School on Smart Structures Technology, Rome
+    awarder: APESS, University La Sapienza
+    date: "2019-04-08"
+    summary: Competition on the design of a SHM system and the development and testing of OMA techniques for steel structures and pedestrian bridges.
     icon: hero/trophy
