ADDS -- CET paper

--- a/data/authors/chiara-nardin.yaml
+++ b/data/authors/chiara-nardin.yaml
@@ -15,7 +15,7 @@ status:
   icon: "☕️"
 role: MSCA PostDoc at ETH Zurich (Switzerland) and UniTn (Italy)
 bio: |
-  Chiara Nardin 
+  Structural engineer and MSCA postdoctoral fellow at the Chair of Risk, Safety \& Uncertainty Quantification ([https://sudret.ibk.ethz.ch/](RSUQ)), ETH Zurich, and at the Hazard Mitigation, Structural Dynamics and Control ([https://researchcenter.unitn.it/en/nhmsdc](HMSDC)) group, University of Trento. She received her Ph.D. in Modelling and Simulation in 2022 at the University of Trento with a thesis on seismic experimental analyses and surrogate models of multi-component systems in special-risk industrial facilities. Her research focuses on seismic risk analysis, fragility assessment, uncertainty quantification, surrogate modelling, and machine learning for industrial facilities. She actively participated in the EU H2020 SERA–SPIF project and is currently developing state-dependent fragility frameworks for complex time-dependent industrial systems.
 
 affiliations:
   - name: ETH Zurich - Risk Safety and Uncertainty Quantification (RSUQ) Chair 
