--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Papers
     url: publication/
     weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
+#  - name: Talks
+#    url: /#talks
+#    weight: 12
 #  - name: News
 #    url: /#news
 #    weight: 13
@@ -22,9 +22,9 @@ main:
   - name: Experience
     url: experience/
     weight: 30
-  - name: Courses
-    url: courses/
-    weight: 40
+#  - name: Courses
+#    url: courses/
+#    weight: 40
   - name: Contact
     url: contact/
     weight: 50
